More discoclient replacement work dealing with major version reading.